# fast-api_template

./: .gitignore  alembic.ini  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 3e9578aeea95_initial_migration.py  adfd2149fc58_initial_migration.py
app/: deps.py  main.py
app/core/: config.py  errors.py  security.py
app/crud/: book_crud.py  user_crud.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: cc771fe4c394_baseline_migration.py
app/models/: book.py  user.py
app/routers/v1/: auth_router.py  books_router.py
app/schemas/: book.py  user.py
app/services/: auth_service.py  book_service.py
